--- a/Konsolen-och-script-elementet/index.html
+++ b/Konsolen-och-script-elementet/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        window.alert("Hello World!")
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
