Två äldre åtkomstmetoder

--- a/Noder-och-nodåtkomst/index.html
+++ b/Noder-och-nodåtkomst/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>document.querySelectorAll</title>
+    <title>Två äldre åtkomstmetoder</title>
   </head>
   <body>
     <section id="players">
