--- a/Noder-och-nodåtkomst/index.html
+++ b/Noder-och-nodåtkomst/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>En element-loop</title>
+    <title>children (VG)</title>
   </head>
   <body>
     <section id="players">
@@ -13,6 +13,9 @@
         <li>Cesar</li>
       </ol>
     </section>
+    <script>
+      const ol = document.querySelector('ol')
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
