Byt ut HTML-innehåll

--- a/Manipulera-elementnoder/index.html
+++ b/Manipulera-elementnoder/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Byt ut textinnehåll</title>
+    <title>Byt ut HTML-innehåll</title>
   </head>
   <body>
     <h1>En rubrik</h1>
