Sätt ett attribut

--- a/Manipulera-elementnoder/index.html
+++ b/Manipulera-elementnoder/index.html
@@ -2,10 +2,17 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Byt ut HTML-innehåll</title>
+    <title>Sätt ett attribut</title>
   </head>
   <body>
-    <h1>En rubrik</h1>
+    <section id="players">
+      <h1>Spelare</h1>
+      <ol>
+        <li>Alice</li>
+        <li>Bob</li>
+        <li>Cesar</li>
+      </ol>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
