--- a/Manipulera-elementnoder/index.html
+++ b/Manipulera-elementnoder/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Sätt ett attribut</title>
+    <title>Sätt en style-egenskap</title>
   </head>
   <body>
     <section id="players">
