Lägg till HTML-innehåll i flera element

--- a/Manipulera-elementnoder/index.html
+++ b/Manipulera-elementnoder/index.html
@@ -2,7 +2,13 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Sätt en style-egenskap</title>
+    <title>Lägg till HTML-innehåll i flera element (VG)</title>
+    <style>
+      .credits {
+        color: #555;
+        font-size: 0.85em;
+      }
+    </style>
   </head>
   <body>
     <section id="players">
