--- a/Skapa-nodobjekt/index.html
+++ b/Skapa-nodobjekt/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Skapa en textnod</title>
+    <title>Skapa en elementnod</title>
   </head>
   <body>
     <script src="index.js"></script>
