Lägg till ett element, på slutet

--- a/Skapa-nodobjekt/index.html
+++ b/Skapa-nodobjekt/index.html
@@ -2,9 +2,17 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Skapa en elementnod</title>
+    <title>Lägg till ett element, på slutet</title>
   </head>
   <body>
+    <section id="players">
+      <h1>Spelare</h1>
+      <ol>
+        <li>Alice</li>
+        <li>Bob</li>
+        <li>Cesar</li>
+      </ol>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
