Ta bort ett element

--- a/Skapa-nodobjekt/index.html
+++ b/Skapa-nodobjekt/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Lägg till ett element, på slutet</title>
+    <title>Ta bort ett element</title>
   </head>
   <body>
     <section id="players">
