--- a/Events-och-addEventListener/index.html
+++ b/Events-och-addEventListener/index.html
@@ -2,10 +2,10 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>En klickbar knapp: Del 1</title>
+    <title>Ett hover-element</title>
   </head>
-  <body>
-    <input id="button" type="button" value="Klicka här">
+  <body style="margin: 0; min-height: 100vh;">
+    <div id="hover-area" style="min-height: 100vh;"></div>
     <script src="index.js"></script>
   </body>
 </html>
