--- a/Events-och-addEventListener/index.html
+++ b/Events-och-addEventListener/index.html
@@ -2,10 +2,11 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Ett hover-element</title>
+    <title>Öka ett värde</title>
   </head>
   <body style="margin: 0; min-height: 100vh;">
-    <div id="hover-area" style="min-height: 100vh;"></div>
+    <div id="value"></div>
+    <input id="increase" type="button" value="Öka">
     <script src="index.js"></script>
   </body>
 </html>
