--- a/Events-och-addEventListener/index.html
+++ b/Events-och-addEventListener/index.html
@@ -2,10 +2,11 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Öka ett värde</title>
+    <title>Öka eller minska ett värde: Del 1</title>
   </head>
   <body style="margin: 0; min-height: 100vh;">
     <div id="value"></div>
+    <input id="decrease" type="button" value="Minska">
     <input id="increase" type="button" value="Öka">
     <script src="index.js"></script>
   </body>
