--- a/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
+++ b/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
@@ -2,10 +2,9 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>En klickbar knapp: Del 2</title>
-    <script src="index.js"></script>
+    <title>Muspekarens position</title>
   </head>
-  <body>
-    <input id="button" type="button" value="Klicka här">
+  <body style="margin: 0; min-height: 100vh;">
+    <script src="index.js"></script>
   </body>
 </html>
