--- a/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
+++ b/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
@@ -2,9 +2,9 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Muspekarens position</title>
+    <title>Tangentkod</title>
   </head>
-  <body style="margin: 0; min-height: 100vh;">
+  <body>
     <script src="index.js"></script>
   </body>
 </html>
