--- a/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
+++ b/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Tangentkod</title>
+    <title>Shift</title>
   </head>
   <body>
     <script src="index.js"></script>
