--- a/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
+++ b/Global-användning-av-addEventListener-samt-åtkomst-till-event-information/index.html
@@ -2,9 +2,12 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Shift</title>
+    <title>Öka eller minska ett värde: Del 3 (VG)</title>
   </head>
   <body>
+    <div id="value"></div>
+    <input id="decrease" type="button" value="Minska">
+    <input id="increase" type="button" value="Öka">
     <script src="index.js"></script>
   </body>
 </html>
