--- a/Åtkomst-till-formulärvärden/index.html
+++ b/Åtkomst-till-formulärvärden/index.html
@@ -2,11 +2,13 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Ett textfält</title>
+    <title>Ett textfält, ett stycke och en knapp</title>
   </head>
   <body>
     <label for="name">Namn</label>
     <input id="name" placeholder="Namn">
+    <input id="send" type="button" value="Skicka">
+    <p id="greeting"></p>
     <script src="index.js"></script>
   </body>
 </html>
